--- a/intercambia-dao/src/test/resources/jdbc.properties
+++ b/intercambia-dao/src/test/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/siark
-jdbc.username=username
-jdbc.password=password
+jdbc.url=jdbc:mysql://localhost:3066/intercambia
+jdbc.username=root
+jdbc.password=mpsbart
