--- a/intercambia-web/pom.xml
+++ b/intercambia-web/pom.xml
@@ -26,6 +26,12 @@
       <scope>test</scope>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+	  <artifactId>mockito-all</artifactId>
+  	  <version>1.9.0-rc1</version>
+ 	  <scope>test</scope>
+    </dependency>
   </dependencies>
   
 </project>
