--- a/intercambia-dao/pom.xml
+++ b/intercambia-dao/pom.xml
@@ -68,11 +68,16 @@
       		<optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.mockito</groupId>
-	  <artifactId>mockito-all</artifactId>
-  	  <version>1.9.0-rc1</version>
- 	  <scope>test</scope>
+ 		    <groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+  	  		<version>1.9.0-rc1</version>
+ 	  		<scope>test</scope>
     </dependency>
+    <dependency>
+			<groupId>javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.12.1.GA</version>
+	</dependency>
   </dependencies>
 
   <repositories>
